jms/1.7/modules/ROOT/pages/jms-performance.adoc
= Tune JMS Connector for Performance
:keywords: jms, connector, consume, message, source, listener
:page-aliases: connectors::jms/jms-performance.adoc

Performance can be a factor when processing the loading of messages. The following recommendations can help you get the most of Anypoint Connector for JMS (JMS Connector) for your Mule applications.

== Do not Disable Connections Caching

Connections are expensive to create, therefore reuse them as much as you can. By default, JMS Connector uses a caching strategy configuration that reuses as many consumers and producers as possible. Do not disable connection caching because modifying this configuration can reduce the performance of the application.


== Increase Concurrent Messages Processing

To improve the performance of your application you can increase the number of concurrent consumers that receive messages from the same destination. JMS Connector enables you to increase the number of consumers by configuring the *Number of consumers* field in the *On New Message* source. By default, this source uses four consumers concurrently on the same destination, but you can increase this number to the one that fits your needs.

In the following example, you increase the number of consumers:

. In Studio, select the *On New Message* source from your flow.
. In the *On New Message* source configuration screen, set the *Number of consumers* field to `20`.

.JMS Connector Number of consumers Configuration
image::jms-performance-1.png[In the On New Message configuration screen, set the Number of consumers field to 20]

In the XML editor, the `numberOfConsumers` configuration looks like this:

[source,xml,linenums]
----
<jms:listener config-ref="config" destination="#[vars.destination]" numberOfConsumers="20"/>
----

== Optimize the Configuration for Clusters

For applications running in clusters, keep in mind the concept of the primary node and how the connector behaves. When the app runs in a cluster, the *On New Message* source default behavior receives messages only in the primary node, no matter what kind of destination the app is consuming.

In case of consuming messages from a queue, the default behavior is receiving messages in all the cluster's nodes, not just the primary node. JMS Connector enables you to configure the *Primary node only* field in the *On New Message* source. When consuming from a queue in a cluster, do not select the *Primary node only* field, which defaults to `false`.

In the following example, you configure the connector to receive messages in all the nodes:

. In Studio, select the *On New Message* source from your flow.
. In the *Advanced* tab, do not select the *Primary node only* field.

.JMS Connector Primary Node only Configuration
image::jms-performance-2.png[In the Advanced tab of the On New Message source, do not select the Primary node only field]

In the XML editor, the `primaryNodeOnly` configuration looks like this:

[source,xml,linenums]
----
<jms:listener config-ref="config" destination="${inputQueue}" primaryNodeOnly="false"/>
----

In case of consuming messages from a topic, the default behavior is receiving messages only in the primary node, which avoids processing the same message multiple times across the cluster. +

When consuming from a topic in a cluster, not selecting the the *Primary node only* field causes the cluster to process the same message more than once, unless you also configure shared-subscriptions. +
If you are using the JMS 2.0 shared-subscriptions mechanism, then change the cluster configuration to consume from all the nodes, again setting he *Primary node only* field to `false`.

In the following example, you configure the connector using 2.0 spec shared-subscriptions mechanism:

. In Studio, select the *On New Message* source from your flow.
. In the *On New Message* source configuration screen, select *Topic consumer*.
. Select the *Shared* option.
. Set the *Subscription name* to `clusteredEventListener`
. In the *Advanced* tab, do not select the *Primary node only* field.

.JMS Connector Primary Node only Configuration
image::jms-performance-3.png[In the Advanced tab of the On New Message source, do not select the Primary node only field]

In the XML editor, the `jms:topic-consumer`, `shared` and `primaryNodeOnly` configurations look like this:

[source,xml,linenums]
----
<jms:listener config-ref="JMS_20_config" destination="${inputTopic}" primaryNodeOnly="false">
     <jms:consumer-type>
         <jms:topic-consumer shared="true" subscriptionName="clusteredEventListener"/>
     </jms:consumer-type>
 </jms:listener>
----

== See Also

* xref:jms-consume.adoc[Consume Messages]
* xref:jms-topic-subscription.adoc[Configure Topic Subscriptions]
